fix notify
